# streaming-converter

./: .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/custom-scripts/: postcreate.sh  poststart.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
streaming_converter/: __main__.py
streaming_converter/apis/: http_request.py  models.py  navigation.py
streaming_converter/apis/youtube/: parsers.py  paths.py
tests/apis/: http_request_test.py  navigation_test.py
tests/apis/youtube/: parsers_test.py
tests/apis/youtube/responses/: get_songs_continuation.json  get_songs_first_resp.json
