[tool.poetry]
name = "streaming-converter"
version = "0.1.0"
description = "Convert songs between streaming services"
authors = [
    "Gabriel Lima <limagbz@outlook.com>",
    "Gustavo Medeiros <gustavojmmartins@outlook.com>",
]

[tool.poetry.dependencies]
python = "^3.12.1"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.0"
detect-secrets = "1.4.0"
yamllint = "1.33.0"
black = "23.12.1"
flake8 = "7.0.0"
pytest = "7.4.4"
coverage = "7.4.0"
pytest-cov = "4.1.0"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=streaming_converter"]

[tool.coverage.report]
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
